--- a/library_user_custom_imageview/src/main/res/values/attrs.xml
+++ b/library_user_custom_imageview/src/main/res/values/attrs.xml
@@ -8,7 +8,12 @@
         <attr name="piv_initial" format="string"/>
         <attr name="piv_isAnimated" format="boolean"/>
         <attr name="piv_valueOfIncrease" format="integer"/>
-        <attr name="piv_animationInterpolator" format="enum"/>
+        <attr name="piv_animationInterpolator" format="enum">
+            <enum name="AccelerateDecelerateInterpolator" value="0"/>
+            <enum name="AccelerateInterpolator" value="1"/>
+            <enum name="DecelerateInterpolator" value="2"/>
+            <enum name="LinearInterpolator" value="3"/>
+        </attr>
     </declare-styleable>
 
 </resources>
